Fixing skills section on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -498,7 +498,7 @@ li {
     .technology-section {
         text-align: center;
         padding: 20px;
-        height: 100vh;
+        height: 180vh;
     }
 
     .skills-container {
@@ -531,7 +531,7 @@ li {
     }
 
     li {
-        font-size: 14px;
+        font-size: 16px;
         margin-bottom: 10px;
         position: relative;
         padding-left: 0px;
